Smaller fixes